# ntfsprogs-plus

./: AUTHORS  CREDITS  ChangeLog  Makefile.am  README.md  configure.ac
.github/workflows/: c-cpp.yml
include/: acls.h  attrib.h  attrlist.h  bitmap.h  cache.h  compress.h  device_io.h  dir.h  efs.h  endians.h  fsck.h  index.h  inode.h  ioctl.h  layout.h  logfile.h  logging.h  mft.h  mst.h  ntfstime.h  object_id.h  param.h  plugin.h  problem.h  reparse.h  runlist.h  security.h  unistr.h  volume.h  xattrs.h
include/ntfs-3g/: fsck.h  index.h  problem.h  runlist.h  volume.h
libntfs/: Makefile.am  acls.c  attrib.c  attrlist.c  bitmap.c  bootsect.c  cache.c  collate.c  compat.c  compress.c  debug.c  device.c  dir.c  ea.c  efs.c  fsck.c  index.c  inode.c  ioctl.c  lcnalloc.c  logfile.c  logging.c  mft.c  mst.c  object_id.c  problem.c  realpath.c  reparse.c  runlist.c  security.c  unistr.c  unix_io.c  volume.c  win32_io.c  xattrs.c
libntfs-3g/: Makefile.am  attrib.c  bitmap.c  fsck.c  index.c  inode.c  lcnalloc.c  mft.c  problem.c  runlist.c  security.c  volume.c
src/: Makefile.am  cluster.c  list.h  mkntfs.c  ntfscat.c  ntfsck.c  ntfsclone.c  ntfscluster.c  ntfscmp.c  ntfscp.c  ntfsdecrypt.c  ntfsdump_logfile.c  ntfsfallocate.c  ntfsfix.c  ntfsinfo.c  ntfslabel.c  ntfsls.c  ntfsmftalloc.c  ntfsmove.c  ntfsprogs-plus.8.in  ntfsrecover.c  ntfsrecover.h  ntfsresize.c  ntfssecaudit.c  sd.c  utils.c  utils.h
src/deprecated/: ntfsresize.c
tests/: test_all_images.sh
